# doomsday-trainer

./: .gitignore  README.md  pyproject.toml  tox.ini
doomsday_trainer/: dates.py  gui.py  trainer.py
tests/: test_dates.py  test_gui.py  test_trainer.py
