[tool.poetry]
name = "doomsday-trainer"
version = "0.2.0"
description = "Training tool for the Doomsday method."
authors = ["Christofer Bernander <christofer.bernander@magine.com>"]
readme = "README.md"
repository = "https://github.com/cbernander/doomsday-trainer"
packages = [{include = "doomsday_trainer"}]

[tool.poetry.dependencies]
python = "^3.8"
pysimplegui = "^4.60.4"


[tool.poetry.scripts]
doomsday-trainer = "doomsday_trainer.trainer:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
